--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "webpack": "webpack --watch",
-    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "webpack-dev-server",
     "start": "node server.js",
     "lite-server": "lite-server"
   },
@@ -27,22 +24,13 @@
   "dependencies": {
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "file-loader": "^6.2.0",
-    "image-webpack-loader": "^7.0.1",
-    "indexeddb": "0.0.0",
     "mongoose": "^5.5.15",
-    "morgan": "^1.9.1",
-    "webpack": "^5.11.0",
-    "webpack-bundle-analyzer": "^4.3.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-pwa-manifest": "^4.3.0"
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "bootstrap": "^4.5.3",
     "eslint": "^7.16.0",
     "i": "^0.3.6",
-    "jquery": "^3.5.1",
-    "popper.js": "^1.16.1",
-    "webpack-dev-server": "^3.11.0"
+    "jquery": "^3.5.1"
   }
 }
